tests/tooling/fixtures/native/recovery/negative/negative_extern_pure_function_with_body.objc3
// Negative fixture: extern-pure declarations are declaration-only and must end with `;`.
// Expected diagnostic code(s): O3P104.
module NegativeExternPureFunctionWithBody;

extern pure fn add(lhs: i32, rhs: i32) -> i32 {
  return lhs + rhs;
}

fn main() -> i32 {
  return add(1, 2);
}
